<resources>
    <string name="app_name">Parselable</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="userTextView">User: </string>
    <string name="passwordTextView">Password: </string>
    <string name="userEditText"></string>
    <string name="passwordEditText"></string>
    <string name="buttonEjecutar">EJECUTAR</string>
    <string name="title_activity_second">SecondActivity</string>

    <string name="A2UserTextView"></string>
    <string name="A2PasswordTextView"></string>

</resources>
